# hreg

./: .gitignore  CHANGELOG.md  LICENSE  hreg.cabal  hreg.lkshw
.gear/: rules
.gear/tags/: list
app/: Main.hs
src/: HReg.hs  Logger.hs  Prelude.hs
src/HReg/: CLI.hs  Polfiles.hs  Regfiles.hs  Types.hs
src/HReg/Regfiles/: Parser.hs  Types.hs
src/HReg/Types/: App.hs  Converter.hs  Reg.hs
src/Logger/: Types.hs
