cabal-version: 2.4
name: hreg
version: 0.0.1
license: BSD-3-Clause
license-file: LICENSE
maintainer: omgbebebe@gmail.com
author: Sergey Bubnov (omg)
tested-with: ghc ==8.6.5
bug-reports: https://github.com/omgbebebe/hreg/issues
description:

build-type: Simple

library
    exposed-modules:
        HReg
        HReg.CLI
        Logger
    hs-source-dirs: src
    other-modules:
        HReg.Polfiles
        HReg.Regfiles
        HReg.Types
        HReg.Types.App
        HReg.Types.Reg
        Paths_hreg
        Prelude
    autogen-modules:
        Paths_hreg
    default-language: Haskell2010
    default-extensions: OverloadedStrings LambdaCase AutoDeriveTypeable
                        BangPatterns BinaryLiterals ConstraintKinds DataKinds
                        DefaultSignatures DeriveDataTypeable DeriveFoldable DeriveFunctor
                        DeriveGeneric DeriveTraversable DoAndIfThenElse
                        DuplicateRecordFields EmptyDataDecls ExistentialQuantification
                        FlexibleContexts FlexibleInstances FunctionalDependencies GADTs
                        GeneralizedNewtypeDeriving InstanceSigs KindSignatures
                        MonadFailDesugaring MultiParamTypeClasses MultiWayIf NamedFieldPuns
                        PartialTypeSignatures PatternGuards PolyKinds RankNTypes
                        RecordWildCards ScopedTypeVariables StandaloneDeriving
                        TupleSections TypeFamilies TypeSynonymInstances ViewPatterns
    ghc-options: -ferror-spans
    build-depends:
        base-noprelude ^>=4.12.0,
        binary -any,
        bytestring -any,
        bytestring-encoding -any,
        co-log -any,
        conduit -any,
        containers -any,
        directory -any,
        exceptions -any,
        filemanip -any,
        filepath -any,
        relude ^>=0.5,
        optparse-applicative -any,
        text -any,
        unix-compat -any

executable hreg
    main-is: Main.hs
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options: -ferror-spans
    build-depends:
        base ^>=4.12.0,
        hreg -any
